--- a/BasicSecurityAnnotation/pom.xml
+++ b/BasicSecurityAnnotation/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
         -->
+        <dependency>
+            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+            <artifactId>jersey-test-framework-provider-bundle</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <jersey.version>2.12</jersey.version>
